--- a/demo.html
+++ b/demo.html
@@ -41,20 +41,22 @@
         <button onclick="browserTTSUtterance.utter(document.getElementById('input_tts').value);">Go!</button>
     </div>
 
-    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png" /></a>
-    <br />
-    <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">
-        JavaScript Speech API Library
-    </span>
-    by 
-    <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/rderveloy/JavaScript-Sound-Recorder/" property="cc:attributionName" rel="cc:attributionURL">
-        Robert Derveloy
-    </a>
-    is licensed under a 
-    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
-        Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License
-    </a>.
 
+    <footer>
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png" /></a>
+        <br />
+        <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">
+            JavaScript Speech API Library
+        </span>
+        by
+        <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/rderveloy/JavaScript-Sound-Recorder/" property="cc:attributionName" rel="cc:attributionURL">
+            Robert Derveloy
+        </a>
+        is licensed under a
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+            Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License
+        </a>.
+    </footer>
     <script src='SpeechAPILibrary.js'></script>
     <script>
         var elementToHideID = "div_NoJavaScriptWarning";
