--- a/demo.html
+++ b/demo.html
@@ -195,7 +195,7 @@
             if(SpeechAPI.TextToSpeech.isSupported())
             {
                 var sttInputsDivID = "div_ttsInputs";
-                var sttInputDiv = document.getElementById(ttsInputsDivID);
+                var sttInputDiv = document.getElementById(sttInputsDivID);
 
                 if(sttInputDiv.style.display!="block")
                 {
