The sttInputsDivID variable was assigned to the incorrect string value.

--- a/demo.html
+++ b/demo.html
@@ -194,7 +194,7 @@
             }
             if(SpeechAPI.TextToSpeech.isSupported())
             {
-                var sttInputsDivID = "div_ttsInputs";
+                var sttInputsDivID = "div_sttInputs";
                 var sttInputDiv = document.getElementById(sttInputsDivID);
 
                 if(sttInputDiv.style.display!="block")
