Corrected error message link to caniuse.com such that it now points at the correct feature on the site.

--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -26,7 +26,7 @@
 <section id="section_STT">
     <div id="div_STTNotSupportedWarning" name="div_TTSNotSupportedWarning" style="display:none;">
         <p>OOPS!</p>
-        <p>Your browser does not appear to support the Speech Recognition API.  Please see  <a href="http://caniuse.com/#feat=speech-synthesis" target="_blank">caniuse.com</a> for a list of capable browsers.</p>
+        <p>Your browser does not appear to support the Speech Recognition API.  Please see  <a href="http://caniuse.com/#feat=speech-recognition" target="_blank">caniuse.com</a> for a list of capable browsers.</p>
     </div>
     <div id="div_sttInputs" name="div_sttInputs" style="display:none;">
 
