--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -224,6 +224,28 @@
 
 </script>
 <script>
+
+    var test = new ContinuousSession();
+
+    var test = new ContinuousSession();
+
+    test.setEventHandler_onend(function onEndEventHandler(event){
+        console.log("Recognition ended.");
+    });
+
+    test.setEventHandler_onstart(function onStartEventHandler(event){
+        console.log("Recognition started.");
+    });
+
+    test.setEventHandler_onresult(function onResultEventHandler(event){
+        console.log(event);
+    });
+
+    test.setEventHandler_onerror(function onErrorEventHandler(event){
+        console.log("Recognition error!");
+        console.log(event);
+    });
+
     function recognitionStartClickEventHandler()
     {
         var elementToHideID = "button_sttStart";
