Start function was invoking stop() instead of start() on the recognition object.

--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -132,7 +132,7 @@
                 {
                     var logMessage = LOG_PREFIX+"Requesting recognition start...";
                     console.log(logMessage);
-                    _recognition.stop();
+                    _recognition.start();
                 }
                 catch(err)
                 {
