The onend and onstart event handlers should now log the value of the stopRequested and startRequested flags, repectively.

--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -231,10 +231,12 @@
 
     test.setEventHandler_onend(function onEndEventHandler(event){
         console.log("Recognition ended.");
+        console.log("Stop Requested: "+test.stopRequested());
     });
 
     test.setEventHandler_onstart(function onStartEventHandler(event){
         console.log("Recognition started.");
+        console.log("Start Requested: "+test.startRequested());
     });
 
     test.setEventHandler_onerror(function onErrorEventHandler(event){
